--- a/demo/index.html
+++ b/demo/index.html
@@ -2,7 +2,10 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>Demo</title>
+    <title>OrgChart Demo</title>
+    <link rel="stylesheet" href="../dist/ext-theme-neptune-all.css">
+    <style>.ss{color: #e7e7e7
+    }</style>
 </head>
 <body>
 
